2015-04-19  Shunsaku Hirata  <shunsaku.hirata74@gmail.com>

	* pngimage.c: Ask libpng to do gamma correction with assumed
	screen gamma 2.2.

2015-04-12  Shunsaku Hirata  <shunsaku.hirata74@gmail.com>

	* pdfobj.c:  Fix some problems in reading cross-reference streams.
	* pngimage.c: Support PNG gAMA chunk.
	* jpegimage.c: Various fixes in handling JPEG Exif data
	(possible overflow and buffer overrun), adjusting indent and spaces.
	* jp2image.c: JPEG2000 opacity channel support.
	* pdfcolor.c: Update for PDF 1.7 in pdfcolor.c.

2015-04-05  Shunsaku Hirata  <shunsaku.hirata74@gmail.com>

	* pngimage.c: XMP Metadata support for PNG images.

2015-03-27  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* mfileio.[ch]: Use mfgets() parameters as for fgets().

2015-03-24  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* bmpimage.c, dpxcrypt.c, dvi.c, fontmap.[ch], jpegimage.c,
	pdfcolor.[ch], pdfdev.[ch], pdfdoc.c, pdfdraw.c, spc_tpic.c,
	spc_util.c, spc_xtx.c, xbb.c: Copyright "2014" => "2015".

2015-03-24  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* dvipdfmx.c: Change "Copyright (C) 2002-2014" to
	"Copyright (C) 2002-2015".

2015-03-17  Khaled Hosny  <khaledhosny@eglug.org>

	* pdfcolor.c, pdfcolor.h, pdfdoc.c, pdfdraw.c, spc_util.c: Add spot
	colors support, based on patch by Apostolos Syropoulos.

2015-03-15  Khaled Hosny  <khaledhosny@eglug.org>

	* tests/*.{bb,xbb}: Update version number.

2015-03-15  Karl Berry  <karl@tug.org>

	* configure.ac: version 20150315 for TL'15.

2015-03-12  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* jpegimage.c: Fix a bug introduced by me on 2015-02-16.

2015-03-01  Shunsaku Hirata  <shunsaku.hirata74@gmail.com>

	* spc_tpic.c: Make tpic "ar" command dvips compatible to fix the problem
	that an excess line is drawn when "ar" command is used along
	with dvips transformation commands.

2015-02-25  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* fontmap.h (pdf_insert_native_fontmap_record): Declare also
	without '#ifdef XETEX'.